objects/RPS_Contact__x.object
<CustomObject>
    <externalDataSource>ProjData</externalDataSource>
    <externalName>Contact</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <externalDeveloperName>AssistantName</externalDeveloperName>
        <label>Assistant&apos;s Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantPhone__c</fullName>
        <externalDeveloperName>AssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <externalDeveloperName>Birthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Contact Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>DoNotCall</externalDeveloperName>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOptedOutOfFax</externalDeveloperName>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEmailBounced</externalDeveloperName>
        <label>Is Email Bounced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPersonAccount</externalDeveloperName>
        <label>Is Person Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <externalDeveloperName>LastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor/Consultant Request</fullName>
                </value>
                <value>
                    <fullName>B/D Sales Desk</fullName>
                </value>
                <value>
                    <fullName>Blast Email</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>DCIO Referral</fullName>
                </value>
                <value>
                    <fullName>Group Meeting</fullName>
                </value>
                <value>
                    <fullName>Inforce Client Referral</fullName>
                    <label>RPAG</label>
                </value>
                <value>
                    <fullName>ISC Prospecting</fullName>
                </value>
                <value>
                    <fullName>JH Investments</fullName>
                </value>
                <value>
                    <fullName>Merger &amp; Acquisition</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Payroll Provider Referral</fullName>
                </value>
                <value>
                    <fullName>RVP Meeting</fullName>
                </value>
                <value>
                    <fullName>TPA Referral</fullName>
                </value>
                <value>
                    <fullName>RFP Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDM_UUID_c__c</fullName>
        <externalDeveloperName>MDM_UUID__c</externalDeveloperName>
        <label>MDM UUID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <externalDeveloperName>MailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <externalDeveloperName>MailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountryCode__c</fullName>
        <externalDeveloperName>MailingCountryCode</externalDeveloperName>
        <label>Mailing Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <externalDeveloperName>MailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>MailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <externalDeveloperName>MailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongitude__c</fullName>
        <externalDeveloperName>MailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <externalDeveloperName>MailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <externalDeveloperName>MailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <externalDeveloperName>MailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <externalDeveloperName>MiddleName</externalDeveloperName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAddress__c</fullName>
        <externalDeveloperName>OtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <externalDeveloperName>OtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountryCode__c</fullName>
        <externalDeveloperName>OtherCountryCode</externalDeveloperName>
        <label>Other Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <externalDeveloperName>OtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>OtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherLatitude__c</fullName>
        <externalDeveloperName>OtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLongitude__c</fullName>
        <externalDeveloperName>OtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <externalDeveloperName>OtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <externalDeveloperName>OtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <externalDeveloperName>OtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <externalDeveloperName>OtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RPS_403B_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_403B__c</externalDeveloperName>
        <label>403B?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_AUA_As_Of_Date_for_Advisor_c__c</fullName>
        <externalDeveloperName>RPS_AUA_As_Of_Date_for_Advisor__c</externalDeveloperName>
        <label>AUA As Of Date for Advisor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_AUA_for_Advisor_c__c</fullName>
        <externalDeveloperName>RPS_AUA_for_Advisor__c</externalDeveloperName>
        <label>AUA for Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1.5B to $2B&lt;</fullName>
                </value>
                <value>
                    <fullName>$1B to $1.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2.5 to $3B&lt;</fullName>
                </value>
                <value>
                    <fullName>$2B to $2.5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$3B to $5B&lt;</fullName>
                </value>
                <value>
                    <fullName>$200MM to $350MM</fullName>
                </value>
                <value>
                    <fullName>$350MM to $900MM&lt;</fullName>
                </value>
                <value>
                    <fullName>$750MM to $900MM&lt;</fullName>
                </value>
                <value>
                    <fullName>$900MM to $1B&lt;</fullName>
                </value>
                <value>
                    <fullName>More than $5B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Ability_to_Interpret_Complex_Issues__c</fullName>
        <externalDeveloperName>RPS_Ability_to_Interpret_Complex_Issues__c</externalDeveloperName>
        <label>Ability to Interpret Complex Issues</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Designation_Notes_c__c</fullName>
        <externalDeveloperName>RPS_Advisor_Designation_Notes__c</externalDeveloperName>
        <label>Advisor Designation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Profile_Complete_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Advisor_Profile_Complete__c</externalDeveloperName>
        <label>Advisor Profile Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Rating_c__c</fullName>
        <externalDeveloperName>RPS_Advisor_Rating__c</externalDeveloperName>
        <label>MM Advisor Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Risk_Rating_c__c</fullName>
        <externalDeveloperName>RPS_Advisor_Risk_Rating__c</externalDeveloperName>
        <label>Advisor Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Advisor_Value_Proposition_c__c</fullName>
        <externalDeveloperName>RPS_Advisor_Value_Proposition__c</externalDeveloperName>
        <label>Advisor Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Assistant_Email_c__c</fullName>
        <externalDeveloperName>RPS_Assistant_Email__c</externalDeveloperName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RPS_Average_Plan_Size_c__c</fullName>
        <externalDeveloperName>RPS_Average_Plan_Size__c</externalDeveloperName>
        <label>Average Plan Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Blue_Dot_Indicator_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RPS_Blue_Dot_Indicator__c</externalDeveloperName>
        <label>Blue Dot Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPS_Blue_Dot_c__c</fullName>
        <externalDeveloperName>RPS_Blue_Dot__c</externalDeveloperName>
        <label>Blue Dot</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RPS_CRD_Number_c__c</fullName>
        <externalDeveloperName>RPS_CRD_Number__c</externalDeveloperName>
        <label>CRD Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Certifications_and_Designations_c__c</fullName>
        <externalDeveloperName>RPS_Certifications_and_Designations__c</externalDeveloperName>
        <label>Certifications and Designations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Client_Anniversary_Date_c__c</fullName>
        <externalDeveloperName>RPS_Client_Anniversary_Date__c</externalDeveloperName>
        <label>Client Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RPS_Compensation_Types_c__c</fullName>
        <externalDeveloperName>RPS_Compensation_Types__c</externalDeveloperName>
        <label>Compensation Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Dollar Fee</fullName>
                </value>
                <value>
                    <fullName>Asset-Based Fee</fullName>
                </value>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Both Fee and 12(b)1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPS_Contact_Frequency_Preference_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Frequency_Preference__c</externalDeveloperName>
        <inlineHelpText>How often should we contact you?</inlineHelpText>
        <label>Contact Frequency Preference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RPS_Contact_Preference_c__c</fullName>
        <externalDeveloperName>RPS_Contact_Preference__c</externalDeveloperName>
        <inlineHelpText>How do you like to be contacted?</inlineHelpText>
        <label>Contact Preference</label>
        <type>TextArea</type>
    </fields>
</CustomObject>